--- a/config/gl-inet/.config
+++ b/config/gl-inet/.config
@@ -5657,18 +5657,18 @@ CONFIG_PACKAGE_xray-plugin=y
 # CONFIG_PACKAGE_eapol-test is not set
 # CONFIG_PACKAGE_eapol-test-openssl is not set
 # CONFIG_PACKAGE_eapol-test-wolfssl is not set
-CONFIG_PACKAGE_hostapd=y
+# CONFIG_PACKAGE_hostapd=y
 # CONFIG_PACKAGE_hostapd-basic is not set
 # CONFIG_PACKAGE_hostapd-basic-openssl is not set
 # CONFIG_PACKAGE_hostapd-basic-wolfssl is not set
-CONFIG_PACKAGE_hostapd-common=y
+# CONFIG_PACKAGE_hostapd-common=y
 # CONFIG_PACKAGE_hostapd-mini is not set
 # CONFIG_PACKAGE_hostapd-openssl is not set
-CONFIG_PACKAGE_hostapd-utils=y
+# CONFIG_PACKAGE_hostapd-utils=y
 # CONFIG_PACKAGE_hostapd-wolfssl is not set
-CONFIG_PACKAGE_hs20-client=y
-CONFIG_PACKAGE_hs20-common=y
-CONFIG_PACKAGE_hs20-server=y
+# CONFIG_PACKAGE_hs20-client=y
+# CONFIG_PACKAGE_hs20-common=y
+# CONFIG_PACKAGE_hs20-server=y
 # CONFIG_PACKAGE_wpa-cli is not set
 CONFIG_PACKAGE_wpa-supplicant=y
 # CONFIG_WPA_RFKILL_SUPPORT is not set
