--- a/.github/workflows/ImmortalWrt_2102_X86-64.yml
+++ b/.github/workflows/ImmortalWrt_2102_X86-64.yml
@@ -26,6 +26,7 @@ env:
   DIY1_SH: script/immortalwrt/diy1.sh
   DIY2_SH: script/immortalwrt/diy2.sh
   COMMON_SH: script/common.sh
+  INIT_SH: script/init-setting.sh
   TOOLCHAIN_TAG: toolchain
   TOOLCHAIN_RELEASE_UPLOAD: true
   FIRMWARE_RELEASE_UPLOAD: true
@@ -332,7 +333,7 @@ jobs:
         run: |
           cd $OPENWRT_ROOT_PATH
           mkdir -p files/etc/uci-defaults/
-          cp $GITHUB_WORKSPACE/script/init-setting.sh files/etc/uci-defaults/99-init-settings
+          cp $GITHUB_WORKSPACE/$INIT_SH files/etc/uci-defaults/99-init-settings
           chmod +x files/etc/uci-defaults/99-init-settings
           make package/install -j$(nproc) || make package/install -j1 V=s
           make target/install -j$(nproc) || make target/install -j1 V=s
